--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource/geist-mono": "^5.1.0",
     "astro": "^4.15.5",
+    "smooth-scroll": "^16.1.3",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
